<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.aircall_test_v2.features.repos.ReposViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/unit_2">

            <TextView
                android:id="@+id/text_title"
                style="@style/AppTheme.Text.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/repo_filter_title"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radio_group_sort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/unit_2"
                android:checkedButton="@{viewModel.filterUiModel.sort}"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/unit_2"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextAppearance="@style/AppTheme.Text.Content"
                app:layout_constraintBottom_toTopOf="@id/text_input_per_page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group_sort">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_query"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rectangle_outline_blue"
                    android:hint="@string/repo_filter_query_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@{viewModel.filterUiModel.query}"
                    android:textAppearance="@style/AppTheme.Text.EditText" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_per_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/unit_2"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextAppearance="@style/AppTheme.Text.Content"
                app:layout_constraintBottom_toTopOf="@id/button_validate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_query">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_per_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rectangle_outline_blue"
                    android:hint="@string/repo_filter_per_page_hint"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:text="@{viewModel.filterUiModel.perPage}"
                    android:textAppearance="@style/AppTheme.Text.EditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/unit_2"
                android:text="@string/repo_filter_button_text"
                android:textAllCaps="false"
                app:backgroundTint="@color/purple_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_per_page" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>